민구 프로필 병합

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".FindActivity"></activity>
-        <activity android:name=".ProfileActivity" />
+        <activity android:name=".SubActivity" />
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
