유저 아이디를 받아 실시간 데이터 베이스 값인 User_Queue에 자식으로 저장하고 자신의 아이디가 아닌 다른 저장된 유저 아이디 값을 검색하여 랜덤으로 뽑아 채팅방을 만드는 방법으로 랜덤채팅을 구현하려고 함

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChatMsg"/>
+        <activity android:name=".WaitChat"></activity>
+        <activity android:name=".ChatActivity" />
+        <activity android:name=".WaitCaht" />
+        <activity android:name=".ChatMsg" />
         <activity android:name=".FindActivity" />
         <activity android:name=".SubActivity" />
         <activity android:name=".LoginActivity" />
-        <activity android:name=".ChatActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ProfileReviseActivity" />
         <activity
