--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ProfileReviseActivity" />
+        <activity android:name=".UserInfo" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
