--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.dongbanja"
+        applicationId "com.firebasedongbanja.dongbanja"
         minSdkVersion 17
         targetSdkVersion 29
         versionCode 1
